--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,36 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: white url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  min-height: 100vh
+}
+
+main {
+  width: 960px;
+  max-width: 100%;
+  padding: 75px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.columna {
+  float: left;
+}
+
+.columna-5 {width: 41.6%;
+  
+}
+.columna-7{ width: 58.3%;
+
+}
+.clearfix {clear: both;
+}
+.login-button {
+  float: right;
+}
+.instagram {
+  float:left;
+}
+.clearfix {clear: both;
 }
