--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -70,6 +70,10 @@ h1{
   font-weight: 400;
 }
 
+.login:hover{
+  cursor: pointer;
+}
+
 .login img{
   vertical-align: middle;
   margin-right: 10px;
