--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,99 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+*{
+	font-family: 'Open Sans', sans-serif;
+	list-style: none;
+	text-decoration: none;
+}
+
+img{
+	max-width: 100%;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+div#azul{
+	width: 100%;
+	height: 280px;
+	background: #1c5380;
+}
+
+section#banner{
+	position: absolute;
+    top: 135px;
+    left: 50%;
+    transform: translateX(-50%);
+   	width: 80%;
+}
+
+section#banner div#iphone{
+	display: inline-block;
+	width: 35%;
+}
+
+section#banner div#cont{
+	display: inline-block;
+	width: 50%;
+    margin-left: 50px;
+}
+
+section#banner div#cont div#sign div#div-img{
+	display: inline-block;
+}
+
+section#banner div#cont div#sign a{
+	float: right;
+	border: 1px solid #06365f;
+	border-radius: 3px;
+	padding: 7px 10px;
+	background: #06365f;
+	color: #dde4ea;
+	font-weight: 300;
+	margin-top: 15px;
+	margin-right: 10px;
+}
+
+section#banner div#cont div#cont-info{
+	clear: both;
+	position: relative;
+}
+
+section#banner div#cont div#cont-info div#pos-a{
+	position: absolute;
+	top: 0;
+	padding: 40px;
+}
+
+section#banner div#cont div#cont-info div#pos-a h1{
+	margin-top: 0;
+	font-size: 30px;
+	color: #06365f;
+}
+
+section#banner div#cont div#cont-info div#pos-a h1 span{
+	display: block;
+}
+
+section#banner div#cont div#cont-info div#pos-a p{
+	color: #5d5c5c;
+}
+
+section#banner div#cont div#cont-info div#pos-a p#p-3{
+	margin-bottom: 40px;
+}
+
+section#banner div#cont div#cont-info div#pos-a a#a-1{
+	margin-right: 20px;
+}
+
+footer{
+	position: absolute;
+	bottom: 0;
+}
+
+footer ul li{
+	display: inline-block;
+}
+
