--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,82 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+*{
+	font-family: 'Open Sans', sans-serif;
+	list-style: none;
+	text-decoration: none;
+}
+
+img{
+	max-width: 100%;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
 }
+
+div#blue{
+	width: 100%;
+	height: 280px;
+	background: #1c5380;
+}
+
+section#container {
+	position: absolute;
+    top: 110px;
+    display: flex;
+    justify-content: center;
+    
+}
+
+section#container div#iphone{
+	display: inline-block;
+	width: 30%;
+}
+
+section#container div#content {
+  display: inline-block;
+  width: 50%;
+  margin-left: 50px;}
+
+section#container div#content div#login div#div-img{
+	display: inline-block;
+}
+
+section#container div#content div#login a{
+	float: right;
+	border: 1px solid #06365f;
+	border-radius: 5px;
+	padding: 7px 10px;
+	background: #06365f;
+	color: #dde4ea;
+	font-weight: 300;
+	margin-top: 15px;
+	margin-right: 10px;
+}
+
+section#banner div#content div#contain-a{
+	clear: both;
+	position: relative;
+
+}
+
+section#banner div#content div#contain-a div#parr-a{
+	position: absolute;
+	top: 0;
+	padding: 40px;
+}
+
+section#banner div#content div#contain-a div#parr-a h1{
+	
+	font-size: 30px;
+	margin-top: 0;
+	color: #06335f;
+}
+
+section#banner div#content div#contain-a div#parr-a h1 span{
+	display: block;
+}
+
+
+
+
