--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -37,7 +37,7 @@ body {
 button {
   background-color:#1c5380;
   float: right;
-  width: 90px;
+  width: 100px;
   height: 40px;
   margin-top: 10px;
   border-radius: 2px;
@@ -47,25 +47,31 @@ button {
 
 .home-logo{
   float: left;
-  margin-top: 2px;
+  margin-top: 6px;
 }
 
 .text-logo{
  line-height: 26px; 
  margin:0;
  margin-left: 8px;
+ font-size: 1.3em;
 }
 
 footer ul {
   list-style: none;
   clear: both;
   margin-left: 140px;
+  margin-bottom: 30px;
 }
 
 footer li {
   display: inline;
   clear: both;
   margin:auto;
+}
+
+footer li :last-child{
+  margin-left: 20px;
 }
 
 .special {
@@ -110,3 +116,6 @@ h1,p {
  margin-left: 30px;
 }
 
+/* .everything, .main, footer {
+  border: 1px solid black;
+} */
