--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -10,7 +10,6 @@ body {
   background-image: url("../images/bgtile.png");
   background-repeat : repeat-x;
   width:100%;
-  min-width:1024px;
 }
 
 #content{
@@ -21,16 +20,14 @@ body {
 .left-side{
 	float:left;
 	width:30%;
+	margin-bottom:40px;
 }
 
 .right-side{
 	float:left;
 	margin-left:5%;
 	width:50%;
-}
-
-.clear-fix{
-	clear: both;
+	
 }
 
 .top{
@@ -42,21 +39,24 @@ body {
 	float:left;
 	width:315px;
 	height:100%;
+	margin-left:5px;
 }
 
 .top-right{
 	float:right;
 	height:50%;
-	background-color:#1c5380;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background: linear-gradient(to bottom, #a2b6c7, #3b6c94, #2a5d87);
+	border-radius: 4px;
+	border: 1px solid #06365f;
 	margin-top:20px;
+	margin-right:20px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .top-right a{
-	margin: 25px;
+	margin: 20px;
 	text-decoration:none;
 	color:#c8d4de;
 	font-weight:bold;
@@ -72,13 +72,13 @@ body {
 .main{
 	background-image:url("../images/frame.png");
 	background-repeat: no-repeat;
-	padding: 20px;
-	margin: 10px;
+	padding: 40px;
 	font-size: 0.9em;
 }
 
 .main h1{
 	color: #06365f;
+	line-height: 1.2em;
 }
 
 .download{
@@ -87,4 +87,38 @@ body {
 
 .download-right{
 	margin-left:20px;
+}
+
+.footer{
+	clear: both;
+	margin:0 auto;
+	padding-right:200px;
+	width:75%;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size:0.9em;
+}
+
+.copy{
+	float:right;
+}
+
+.menu > ul{
+	list-style-type: none;
+}
+.menu li{
+	float:left;
+}
+
+.menu li:not(:first-child){
+	margin-left:15px;
+}
+
+.menu a{
+	text-decoration:none;
+	color:#1c5380;
+}
+
+.copy{
+	color:gray;
 }
