--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,110 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #f8f8f8;
+}
+
+/* blue background header */
+.header-blue{
+  height: 300px;
+  background-color: #1c5380;
+}
+
+/* everything below here is wrapped in a container */
+.container{
+  width: 850px;
+  margin: 0 auto;
+  position: relative;
+  bottom: 200px;
+}
+
+/* left div styling starts here */
+.left-article{
+  float: left;
+}
+
+/* right div styling starts here */
+.right-article{
+  float: right;
+  width: 50%;
+}
+
+.ig-logo{
+  vertical-align: middle;
+  margin-right: 25px;
+}
+
+.log-in{
+  background-color: #336b99;
+  font-weight: bold;
+  color: #eff3f7;
+  width: 80px;
+  border-radius: 3px;
+  border-color: #0c2f4b;
+  line-height: 29px;
+}
+
+.frame{
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 30px;
+}
+
+h1{
+  font-size: 1.5em;
+}
+
+.right-article p{
+  font-size: 0.9em;
+}
+
+button img{
+  vertical-align: middle;
+  margin-right: 5px;
+}
+
+.phone-badges{
+  margin-top: 20px;
+}
+
+span{
+  font-weight: bold;
+}
+
+.capture-header{
+  color: #06365f;
+}
+
+/* to clear the 2 floating divs */
+.clear{
+  clear: both;
+}
+
+/* footer styling starts here */
+footer{
+  width: 700px;
+  margin: 50px auto 0px auto;
+}
+
+.footer-ul{
+  list-style: none;
+  display: inline;
+}
+
+.footer-li{
+  float: left;
+  font-size: 12px;
+  text-transform: uppercase;
+  text-align: center;
+  width: 65px;
+}
+
+.footer-li a{
+  color: #3089d6;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.copyright{
+  color: rgba(182, 182, 182, 0.7);
 }
