--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,62 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.bluebox{
+  background-color:#06365f ;
+  height: 200px;
+}
+
+.whitebox{
+  background-color: white;
+}
+
+.links{
+  background-color: white;
+  color:#1c5380;
+  position: absolute;
+  top: 625px;
+  left: 450px;
+  font-size: 12px;
+  
+}
+ 
+.content{
+  background:url(../images/frame.png);
+  background-repeat: no-repeat;
+  padding: 30px 30px 30px 30px;
+  position: absolute;
+  top: 170px;
+  right: 360px;
+  border:transparent;
+  
+}
+
+.phones{
+position: absolute;
+top: 100px;
+left:100px;
+}
+
+h2{
+  color:#1c5380;
+}
+.login{
+  border-radius: 3%;
+  border: none;
+  position: absolute;
+  top: 120px;
+  left: 820px;
+  background-color:#1c5380;
+  
+}
+.instagramlogo{
+  position: absolute;
+  top:100px;
+  right: 500px;
+}
+.iphone{
+  position: absolute;
+  top:548px;
+  right:500px;
+}
