--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,104 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+.login-button {
+  /* background-color: #2b5b83; */
+  color: white;
+  width: 80px;
+  padding: 10px;
+  position: relative;
+  left: 350px;
+  top: -70px;
+  border: 2px solid #06365f;
+  border-radius: 5px;
+  background: linear-gradient(#1c5380,#497ca7);
+
+}
+
+.login-text {
+  font-weight: 500;
+  position: relative;
+  top: -4px;
+  padding-left: 2px;
+  color: transparent;
+  text-shadow: 0 0 0.0px rgb(255, 255, 255);
+}
+
+.header {
+  background-color: #1c5380;
+}
+
+.instagram-logo-login {
+  position: relative;
+  float: left;
+  top: -160px;
+  left: 175px;
+}
+
+.phones {
+  position: relative;
+  float: left;
+  top: -200px;
+  left: 100px;
+}
+
+.container {
+  background: url("../images/frame.png") no-repeat;
+  position: relative;
+  float: right;
+  top: -70px;
+  right: 300px;
+  width: 600px;
+  height: 450px;
+  padding: 25px;
+}
+
+h1 {
+  font-size: 20pt;
+  padding: 0;
+  margin: 0;
+  color: #1c5380;
+}
+
+p {
+  font-size: 12pt;
+  padding: 0;
+  margin: 0;
+}
+
 body {
+  text-align: left;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: white;
+}
+
+
+.nav-bar {
+  text-align: center;
+  /* border: 1px solid black; */
+  color: #1c5380;
+  clear: both;
+  position: fixed;
+  bottom: 40px;
+  left: 20%;
+}
+
+.copyright {
+  color: lightgray;
+}
+
+button {
+  border: 1px solid black;
+  background-color: #1c5380;
+  width: 75px;
+  padding: 10px;
+  position: fixed;
+  right: 0;
+}
+
+li {
+  display: inline-block;
+  list-style-type: none;
+  padding: 10px;
 }
